--- a/src/app/hero-selector/hero-selector.component.scss
+++ b/src/app/hero-selector/hero-selector.component.scss
@@ -4,7 +4,7 @@
   gap: 8px;
   font-family: Arial, sans-serif;
   position: relative;
-  z-index: 1;
+  z-index: 3;
 
   label {
     color: white;
